#################################################################
#  Date             12/03/2020                                  #
#  Author           Chi Thanh NGUYEN                            #
#                                                               #
#  Copyright (c) 2020 nChain Limited. All rights reserved       #
#################################################################

message("Building bscrypt IDE")
## TODO add protobuf generation for both c++ and flutter
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/client)
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/server)